# evalshift-action

./: DOCS.md  LICENSE  README.md  action.yml  llms-full.txt  pyproject.toml
.github/workflows/: ci.yml  dogfood.yml
examples/dogfood/: evalshift.yaml  golden.jsonl  prompts.py
scripts/: evalshift_action.py
tests/: test_evalshift_action.py
